# ChessAI

./: CMakeLists.txt  main.cpp  piece.cpp  piece.h
Google_tests/: BoardTests.cpp  FenTest.cpp  MoveGenerationTest.cpp  PerftTest.cpp
assets/: Formula sheet EEE352.doc
src/: AI.cpp  AI.h  Board.cpp  Board.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Piece.cpp  Piece.h  Renderer.cpp  Renderer.h  UI.cpp  UI.h  main.cpp  move_generation.cpp  move_generation.h
src/core/: AI.cpp  AI.h  Board.cpp  Board.h  FEN.cpp  FEN.h  Game.cpp  Game.h  Piece.h  castling_rights.cpp  castling_rights.h  move_generation.cpp  move_generation.h  moves.cpp  moves.h  perft.cpp  perft.h
src/themes/: ClassicThemeManager.cpp  Themes.h
